--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
       background-color: green;
       color: white;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       font-size: 30px;
       font-weight: bold;
       z-index: 1000;
       cursor: pointer;
+      text-align: center;
     }
 
     footer {
@@ -205,7 +207,11 @@
     function showSaleAnimation(member) {
         const popup = document.createElement("div");
         popup.classList.add("popup");
-        popup.textContent = `Bien joué ${member}, tu viens de faire une vente !`;
+        popup.innerHTML = `
+          <div>Bien joué</div>
+          <div>${member}</div>
+          <div>tu viens de faire une vente !</div>
+        `;
         popup.onclick = function() {
             popup.remove();
         };
