--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
         popup.innerHTML = `
           <div>Bien joué</div>
           <div>${member}</div>
-          <div>tu viens de faire une vente !</div>
+          <div>tu viens de faire</div>
+          <div>une vente !</div>
         `;
         popup.onclick = function() {
             popup.remove();
